# Ai-Model-SmartRouter-

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  docker-entrypoint.sh  docker_download_onnx.py  main.py  package-lock.json  package.json  plugin.py  pyproject.toml  requirements.txt
adapters/: __init__.py  openclaw_plugin.py  standalone_app.py
config_backups/: config_20260711_124320_auto_before_save.yaml  config_20260711_200145_auto_before_save.yaml  config_20260711_201024_auto_before_save.yaml  config_20260711_201048_auto_before_save.yaml  config_20260711_202233_auto_before_save.yaml  config_20260711_203653_auto_before_save.yaml  config_20260712_122857_auto_before_save.yaml  config_20260712_122912_auto_before_save.yaml  config_20260712_122931_auto_before_save.yaml  config_20260712_122937_auto_before_save.yaml  config_20260712_122941_auto_before_save.yaml  config_20260712_122945_auto_before_save.yaml  config_20260712_122952_auto_before_save.yaml  config_20260712_123014_auto_before_save.yaml  config_20260712_123823_auto_before_save.yaml
core/: __init__.py  auth.py  config.py  database.py  exchange_rate.py  fallback_logger.py  feedback_analyzer.py  notifier.py  predictor.py  pricing_manager.py  router.py  script_engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/: Layout.tsx  Toast.tsx
frontend/src/pages/: BalancePage.tsx  BigScreenPage.tsx  ConfigPage.tsx  DashboardPage.tsx  DifficultyPage.tsx  ExchangeRatesPage.tsx  FeedbackPage.tsx  HealthConfigPage.tsx  HealthPage.tsx  LoginPage.tsx  ModelAliasesPage.tsx  ModelsPage.tsx  NotificationsPage.tsx  PermissionsPage.tsx  ProvidersPage.tsx  RequestLogsPage.tsx  RouteConfigPage.tsx  StorageConfigPage.tsx  TenantUsagePage.tsx  TenantsPage.tsx  TrainingSamplesPage.tsx  TuningPage.tsx  UsersPage.tsx  index.ts
frontend/src/utils/: format.ts
models/: README.md
scripts/: admin_tools.py  build.sh  download_minilm.py  inject_feedback.js  validate_dockerfile.py
src/smart_router/: __init__.py  cli.py
src/smart_router/adapters/: __init__.py
src/smart_router/adapters/fastapi_app/: __init__.py  app.py
src/smart_router/auth/: __init__.py  api_key.py  authorization.py  jwt_auth.py  superadmin.py
src/smart_router/core/: __init__.py  exchange_rate.py
src/smart_router/health/: __init__.py  checker.py
src/smart_router/quota/: __init__.py  manager.py
tests/: test_core.py
(+21 files in other folders)
