[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-router"
version = "2.0.0"
description = "Intelligent LLM model routing engine with dual-path ML/RL + scoring, multi-tenant support, and pluggable architecture"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "OpenClaw Team" },
]
keywords = ["llm", "router", "ai", "model-routing", "smart-router"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Web framework (core)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # Config & validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # ML
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "onnxruntime>=1.17",
    "joblib>=1.4",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # Logging
    "structlog>=24.0",
    # Optional: Prometheus metrics
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9", "asyncpg>=0.29"]
mysql = ["pymysql>=1.1", "aiomysql>=0.2"]
redis = ["redis>=5.0"]
litestar = ["litestar>=2.0"]
onnx = ["onnxruntime>=1.17"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
transformers = ["transformers>=4.44", "torch>=2.4"]

[project.scripts]
smart-router = "smart_router.cli:main"

[project.entry-points."smart_router.adapters"]
fastapi = "smart_router.adapters.fastapi_app:create_app"
plugin = "smart_router.adapters.plugin:setup"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_router"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
